fx2j-parser/src/test/resources/element/valid/constant.fxml
<?import java.lang.Double?>
<Double xmlns:fx="http://javafx.com/fxml" fx:constant="NEGATIVE_INFINITY"/>